--- a/app/src/main/res/layout/item_news_list.xml
+++ b/app/src/main/res/layout/item_news_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="16dp"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/item_layout_author"
@@ -14,6 +15,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!-- Adicionem o Curso -->
+    <TextView
+        android:id="@+id/item_layout_course"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
